# Core-AI-Inference-Engine

./: Core AI Inference Engine.slnx  README.md  aiport.env  comandos.txt
AIPort.Adapter.Orchestrator/: AIPort.Adapter.Orchestrator.csproj  AIPort.Adapter.Orchestrator.http  HEALTH_CHECK.md  Program.cs  appsettings.Development.json  appsettings.json
AIPort.Adapter.Orchestrator.Tests/: AIPort.Adapter.Orchestrator.Tests.csproj  GlobalUsings.cs
AIPort.Adapter.Orchestrator.Tests/Configuration/: RuntimeInputSettingsBindingTests.cs  SpeechSettingsBindingTests.cs
AIPort.Adapter.Orchestrator.Tests/Domain/: VisitContextTests.cs
AIPort.Intelligence.Service/: AIPort.Intelligence.Service.csproj  AIPort.Intelligence.Service.http  Program.cs  appsettings.Development.json  appsettings.json
AIPort.Intelligence.Service.Tests/: AIPort.Intelligence.Service.Tests.csproj  DecisionEngineTests.cs  HttpNlpProcessorTests.cs
AIPort.Nlp.Agent.Service/: README.md  diagnose_llm.py  list_gemini_models.py  pyproject.toml  requirements.txt
AIPort.Nlp.Agent.Service/app/: __init__.py  main.py  models.py  settings.py
AIPort.Nlp.Agent.Service/app/agents/: __init__.py  base.py  heuristic_agent.py  spacy_agent.py
AIPort.Nlp.Agent.Service/app/services/: __init__.py  inference_service.py
AIPort.Nlp.Agent.Service/tests/: test_api.py
admin-portal/: .env  index.html  package-lock.json  package.json  vite.config.js
docs/: AIPort-Produto-Integracoes-e-Webhooks-Exemplos.pptx  AIPort-Produto-Integracoes-e-Webhooks.pptx  AIPort-Visao-Tecnica-Engenharia.pptx  AIPort-Visao-Tecnica-do-Sistema.pptx
(+161 files in other folders)
